Making basic HTML structure and adding images

--- a/index.html
+++ b/index.html
@@ -5,5 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Creatures animation and gradient</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <img src="imgs/back.png" />
+      <img src="imgs/CryoWyrm.png" />
+      <div class="content">
+        <div class="name">Scalebound</div>
+        <div class="fullName">Realms</div>
+      </div>
+    </div>
+
+    <div class="card card1">
+      <img src="imgs/back.png" />
+      <img src="imgs/NeonSerpent.png" />
+      <div class="content">
+        <div class="name">Scalebound</div>
+        <div class="fullName">Realms</div>
+      </div>
+    </div>
+  </body>
 </html>
