feat: define root color palette and font imports

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Creatures animation and gradient</title>
   </head>
   <body>
@@ -10,17 +12,17 @@
       <img src="imgs/back.png" />
       <img src="imgs/CryoWyrm.png" />
       <div class="content">
-        <div class="name">Scalebound</div>
-        <div class="fullName">Realms</div>
+        <div class="name">Rune</div>
+        <div class="fullName">Ascension</div>
       </div>
     </div>
 
     <div class="card card1">
       <img src="imgs/back.png" />
-      <img src="imgs/NeonSerpent.png" />
+      <img src="imgs/EclipseReaver.png" />
       <div class="content">
-        <div class="name">Scalebound</div>
-        <div class="fullName">Realms</div>
+        <div class="name">Rune</div>
+        <div class="fullName">Ascension</div>
       </div>
     </div>
   </body>
